--- a/src/main/webapp/css/ProductStyle.css
+++ b/src/main/webapp/css/ProductStyle.css
@@ -16,8 +16,16 @@ and open the template in the editor.
     width: 800px;
     margin: 0 auto;
     position: absolute;
-    right: 300px;;
+    right: 300px;
     bottom: 200px;  
+}
+.containerList{
+
+    width: 800px;
+    margin: 0 auto;
+    position: absolute;
+    right: 300px;
+    bottom: 300px;     
 }
 
 fieldset legend{
@@ -29,11 +37,22 @@ fieldset legend{
 fieldset table{
     margin: 0 auto;
     text-align: center;
-   
+    
+    
+}
+
+fieldset{
+    margin: 0 auto;
+    witdth: 500px;
+}
+
+body{
+    margin: 0 auto;
+    witdth: 500px;
 }
 #input{
-    margin: 0 auto;
-    
+    margin-left: 30%;	
+    margin-top: 10px;
 }
 #setas{
     text-align: center;
@@ -43,6 +62,7 @@ fieldset table{
 .divsForm{
     margin: 5px 0;
 }
+
 .divsForm label{
 
 }
