--- a/src/main/webapp/css/visualizeProductStyle.css
+++ b/src/main/webapp/css/visualizeProductStyle.css
@@ -2,7 +2,7 @@
 
 body{
     padding-top: 100px;
-    background-color: lightgray;
+    background-color: rgb(238,238,224);
 }
 .go-back{
     margin-left:2%;
