--- a/src/main/webapp/css/ProductStyle.css
+++ b/src/main/webapp/css/ProductStyle.css
@@ -10,22 +10,22 @@ and open the template in the editor.
 
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-
+#imgAdd{
+    margin: 30px;
+}
+.go-back{
+    margin-left:6%;
+    margin-top: 6%;
+}
 .containerMain{
-
-    width: 800px;
-    margin: 0 auto;
-    position: absolute;
-    right: 300px;
-    bottom: 200px;  
+    width: 40%;
+    margin: 12% auto;
+    
 }
 .containerList{
 
-    width: 800px;
-    margin: 0 auto;
-    position: absolute;
-    right: 300px;
-    bottom: 300px;     
+    width: 40%;
+    margin: 12% auto;
 }
 
 fieldset legend{
@@ -71,7 +71,7 @@ body{
 
     width: 40%;
     text-align: right;
-    right: 0;
+    float: right;
 
 }
 
