--- a/src/main/webapp/css/replaceImage.css
+++ b/src/main/webapp/css/replaceImage.css
@@ -4,10 +4,38 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 */
 /* 
-    Created on : 06/03/2021, 16:07:35
+    Created on : 10/03/2021, 23:49:42
     Author     : luans
 */
 
+/*
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+*/
+/* 
+    Created on : 06/03/2021, 16:07:35
+    Author     : luans
+*/
+body{
+
+    margin: 15% auto;
+}
+
+.general-content{
+    width: 40%;
+
+    margin: 0 auto;
+    
+
+}
+
+.general-content p, #escolhaArquivoLabel,.mainimage,h1,.old-image{
+    text-align: center;
+}
+#replace{
+    float: right;
+}
 #custom-button{
     border: white;
     background-color: lightgray;
@@ -32,12 +60,13 @@ and open the template in the editor.
 
 .search-field{
     border:1px solid black;
-    width: 60%;
+    min-width: 40%;
+    max-width: auto;
     height: 20px;
     float: left;
 
 }
 #list-remove-images{
-   margin-top: 2%;
+    margin-top: 15%;
 }
 
