Customização das telas: -Cadastro de produtos -Alterar produto

--- a/src/main/webapp/css/imageUploadStyle.css
+++ b/src/main/webapp/css/imageUploadStyle.css
@@ -7,27 +7,38 @@ and open the template in the editor.
     Created on : 06/03/2021, 16:07:35
     Author     : luans
 */
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
-#custom-button{
-    border: white;
-    background-color: lightgray;
-}
 .general-fieldset{
-    width: 70%;
-    margin: 18% auto;
-}
-
-#custom-button:hover{
-    background: white;
-}
-#custom-text{
-
-}
-#custom-button{
     background-color: white;
+    width: 50%;
+    position: relative;
+    margin-top: 10%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+    border: none;
+    
+}
+custom-button{
+    background: white;
+    border:white;
+    
+}
+custom-button:focus{
+    outline: 0;
+  
+}
+#confimar{
+    background-color: deeppink;
+ 
 }
 #escolhaArquivoLabel{
     float: left;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 10px;
+    margin-top: 4.5px;
 }
 
 .search-field{
@@ -40,4 +51,9 @@ and open the template in the editor.
 #list-remove-images{
    margin-top: 2%;
 }
+fieldset legend{
 
+    font-family: 'Press Start 2P', cursive;
+    font-size: 20px;
+    text-align: center;
+}
