--- a/src/main/webapp/css/Principal.css
+++ b/src/main/webapp/css/Principal.css
@@ -14,9 +14,8 @@ footer{
     background-image: url(../images/banner.png);
     clear: both;
     width:100%;
-    height: 100%;
-    bottom: 0;
     position: relative;
+    padding-bottom:50px;
 }
 
 .rodape p{
@@ -51,6 +50,11 @@ footer{
 }
 #cards{
    margin: 0 auto;
+  
+}
+
+#cards img{
+    margin: 0 auto;
 }
 
 
