--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,12 +1,13 @@
 
 
 body{
-    padding-top: 100px;
-    background-color: 	rgb(211,211,211);
+    padding-top: 50px;
+    background-color: 	rgb(248, 249, 249);
 }
 
 .go-back{
     margin-left:2%;
+    margin-top: -60px;
 }
 
 #content-wrapper{
@@ -37,8 +38,8 @@ body{
 }
 
 #featured{
-    width: auto;
-    height: auto;
+    width: 500px;
+    height: 350px;
     object-fit: cover;
     cursor: pointer;
     border: 2px solid black;
