--- a/src/main/webapp/css/visualizeProductStyle.css
+++ b/src/main/webapp/css/visualizeProductStyle.css
@@ -1,5 +1,6 @@
 
 
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 body{
     padding-top: 100px;
     background-color: rgb(238,238,224);
@@ -12,8 +13,15 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
 }
+ .column h1{
+        width: 650px;
+        padding: 10px;
+        background-color: white;
+        margin-bottom: 15px;
+        font-family: 'Press Start 2P', cursive;
+        
+    }
 @media (max-width: 1079px)
 {
     .column{
@@ -24,6 +32,7 @@ body{
 
     }
 }
+
 @media (min-width: 1079px)
 {
     .column{
@@ -46,8 +55,8 @@ body{
 
 .thumbnail{
     object-fit: cover;
-    max-width: 180px;
-    max-height: 100px;
+    width: 200px;
+    height: 100px;
     cursor: pointer;
     opacity: 0.5;
     margin: 5px;
