--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,8 +1,8 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 body{
     padding-top: 50px;
-    background-color: 	rgb(248, 249, 249);
+    background-color: 	#ccc;
 }
 
 .go-back{
@@ -32,10 +32,18 @@ body{
         width: 650px;
         padding: 10px;
         background-color: white;
-        margin-bottom: 15px;
-
+        margin-bottom: 15px
+        
     }
 }
+  .column h1{
+        width: 630px;
+        padding: 10px;
+        background-color: white;
+        margin-bottom: 15px;
+        font-family: 'Press Start 2P', cursive;
+        
+    }
 
 #featured{
     width: 500px;
@@ -45,6 +53,7 @@ body{
     border: 2px solid black;
 
 }
+
 
 .thumbnail{
     object-fit: cover;
