--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -16,6 +16,15 @@ body{
     justify-content: center;
 
 }
+ .column h1{
+        width: 650px;
+        padding: 10px;
+        background-color: white;
+        margin-bottom: 15px;
+        font-family: 'Press Start 2P', cursive;
+        
+    }
+
 @media (max-width: 1079px)
 {
     .column{
@@ -66,12 +75,12 @@ body{
 
 }
 #product-full-name p{
-    border: 0.5px solid gray;
-    margin: 5% auto;
+    border: 0.2px solid gray;
+
     border-radius: 5%;
 }
 #product-full-name{
-    padding: 7%;
+margin-top: 3%;
 }
 
 .thumbnail:hover{
