--- a/src/main/webapp/css/style_Perfil.css
+++ b/src/main/webapp/css/style_Perfil.css
@@ -2,9 +2,11 @@
 
 
 
+
 #formulario{
-    border: 1px solid black;
     border-radius: 5px;
+    margin-bottom: 20px;
+    border: 1px solid;
 
 }
 #demo{
