--- a/src/main/webapp/css/EstiloCarrinho.css
+++ b/src/main/webapp/css/EstiloCarrinho.css
@@ -7,22 +7,22 @@ and open the template in the editor.
     Created on : 05/05/2021, 11:20:00
     Author     : adm
 */
+body{
+    width: 50%;
+}
 
 #produto img{
     width: 60px;
     height: 60px;
-    border: 1px solid;
 }
 
 #produto{
-    border: 1px solid;
     width: 20%;
 
 }
 
 #produto p{
     width: 40%;
-    border: 1px solid;
     float: right;
     text-align: left;
     margin: 0 90px 0 2px;
@@ -32,7 +32,6 @@ and open the template in the editor.
 #input{
     width: 50%;
     height: 20%;
-    border: 1px solid;
 }
 tr th{
     text-align: left;
@@ -44,7 +43,6 @@ tr th{
     width: 30%;
 }
 #valorQuantidade{
-    border: 1px solid;
     width: 10%;
     text-align: center;
     margin: 0 auto;
@@ -52,6 +50,11 @@ tr th{
 
 
 #input img{
-    width: 4%;
+    width: 10%;
 
+}
+#product-listing{
+    margin-top: 5%;
+    margin-left: 20%;
+    width: 60%;
 }
