--- a/src/main/webapp/css/EstiloRevisarPedido.css
+++ b/src/main/webapp/css/EstiloRevisarPedido.css
@@ -38,3 +38,9 @@ and open the template in the editor.
     margin-left: 20%;
     margin-right: 20%;
 }
+
+#valorTotal{
+   text-align: center;
+   font-size: 40px;
+}
+
