--- a/src/main/webapp/css/EstiloRevisarPedido.css
+++ b/src/main/webapp/css/EstiloRevisarPedido.css
@@ -7,6 +7,18 @@ and open the template in the editor.
     Created on : 07/05/2021, 20:32:13
     Author     : luans
 */
+.msg {
+  width:90%;
+  border: 1px solid;
+  padding:10px;
+  margin: 20px;
+  color: grey;
+}
+.msg-error {
+  border-color: #d32f2f;
+  background-color: #ef5350;
+  color: white;
+}
 
 .prod-img{
     height: 80px;
@@ -81,5 +93,8 @@ input[type=submit]{
 
 #vazio{
     margin-top: 300px;
+    text-align: center;
+}
+#other-option{
     text-align: center;
 }
