--- a/src/main/webapp/css/style_menu.css
+++ b/src/main/webapp/css/style_menu.css
@@ -1,6 +1,9 @@
 body{
 	font-family: 'Courier Prime', monospace;
 }
+.thanks{
+    text-align: center;
+}
 #menu-navbar {
 	position: fixed;
 	top: 0;
